gcc/testsuite/gfortran.dg/pr77415_2.f90
! { dg-do compile }
function f()
   f(g) = 0       ! { dg-error "Statement function" }
contains
   function g()
   end
end

